--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -17,7 +17,7 @@
         <% if @prototype.image.attached? %>
           <%= image_tag @prototype.image %>
         <% else %>
-          <%= image_tag 'default_image.png', alt: 'デフォルト画像' %>
+          <%= image_tag asset_path('default_image.png'), alt: 'デフォルト画像' %>
         <% end %>
       </div>
 
