--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -9,6 +9,10 @@
     <p class="card__summary">
       <%= prototype.catch_copy %>
     </p>
-    <%= link_to "by #{prototype.user.name}", user_path(prototype.user), class: :card__user %>
+    <% if prototype.user.present? %>
+      <%= link_to "by #{prototype.user.name}", user_path(prototype.user), class: :card__user %>
+    <% else %>
+      <span class="card__user">ユーザー不明</span>
+    <% end %>
   </div>
 </div>
