--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -4,7 +4,12 @@
       <p class="prototype__hedding">
         <%= @prototype.title %>
       </p>
+
+      <% if @prototype.user.present? %>
       <%= link_to "by #{@prototype.user.name}", user_path(@prototype.user), class: :prototype__user %>
+      <% else %>
+        <p class="prototype__user">ユーザー情報がありません</p>
+      <% end %>
 
       <% if @prototype.user == current_user %>
         <div class="prototype__manage">
@@ -46,9 +51,7 @@
           <% end %>
         <% end %>
 
-        <%# // ログインしているユーザーには上記を表示する %>
         <ul class="comments_lists">
-          <%# 投稿に紐づくコメントを一覧する処理を記述する %>
           <% @prototype.comments.each do |comment| %>
             <li class="comments_list">
               <%= comment.content %>
