--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,21 +18,21 @@
           <div class="nav__left">
             <%= link_to image_tag("logo.png", class: :logo), root_path %>
           </div>
-          <%# ログインしているときは以下を表示するようにしましょう %>
-          <% if user_signed_in? %>
+                  
            <div class="nav__right">
-            <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete }  %>
+            <% if user_signed_in? %>
+            <%= link_to current_user.name, user_path(current_user), class: :nav__user_name %>
+            <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete }, class: :nav__btn %>
             <%= link_to "New Proto", new_prototype_path, class: :nav__btn %>
            </div>
-          <%# // ログインしているときは上記を表示するようにしましょう %>
-          <%# ログインしていないときは以下を表示するようにしましょう %>
+         
           <% else %>
            <div class="nav__right">
             <%= link_to "ログイン", new_user_session_path, class: :nav__btn %>
             <%= link_to "新規登録", new_user_registration_path, class: :nav__btn %>
            </div>
           <% end %>
-          <%# // ログインしていないときは上記を表示するようにしましょう %>
+ 
         </div>
       </div>
     </header>
